--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -45,6 +45,8 @@ eureka:
   client:
     service-url:
       defaultZone: http://172.17.0.3:8761/eureka/
+  instance:
+    prefer-ip-address: true
 logging:
   level:
     org:
