--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,7 +44,8 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://172.17.0.3:8761/eureka/
+#      defaultZone: http://172.17.0.3:8761/eureka/
+      defaultZone: http://192.168.88.149:8001/
   instance:
     prefer-ip-address: true
 logging:
