--- a/src/main/resources/application-gateway1.yml
+++ b/src/main/resources/application-gateway1.yml
@@ -1,7 +1,7 @@
 node-ip-address: 192.168.248.129 #节点/虚拟机ip
 node-port: 8004
 register:
-  ip-address: 192.168.248.128
+  ip-address: 192.168.88.237
   port1: 8001
   port2: 8002
   port3: 8003
@@ -23,7 +23,7 @@ eureka:
   instance:
     prefer-ip-address: true
     ip-address: ${node-ip-address}
-    non-secure-port: ${host-port} #外网发现的端口
+    non-secure-port: ${node-port} #外网发现的端口
     instance-id: ${eureka.instance.ip-address}:${eureka.instance.non-secure-port}
 #logging:
 #  level:
