--- a/src/main/resources/application-gateway2.yml
+++ b/src/main/resources/application-gateway2.yml
@@ -23,7 +23,7 @@ eureka:
   instance:
     prefer-ip-address: true
     ip-address: ${node-ip-address}
-    non-secure-port: ${host-port} #外网发现的端口
+    non-secure-port: ${node-port} #外网发现的端口
     instance-id: ${eureka.instance.ip-address}:${eureka.instance.non-secure-port}
 #logging:
 #  level:
